--- a/views/blogs/atlanta_hawks_blog.html
+++ b/views/blogs/atlanta_hawks_blog.html
@@ -12,14 +12,14 @@
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" media="screen" />
     </head>
     <body>
-        <div class="container">
-            <div class="header box">
+        <main class="container">
+            <header class="box">
                 <div class="atlanta_hawks logo"></div>
                 <h1>Hawks Blogs</h1>    
-            </div>
-            <div class="content box">
-                <div id="blog-cards">
-                  <div class="blog-card">
+            </header>
+            <article class="content box">
+                <article id="blog-cards">
+                  <article class="blog-card">
                     <div class="avatar">
                       <div class="avatar-circle">
                         <span class="initials">MP</span>
@@ -33,7 +33,7 @@
                       </p>
                     </div>
                     <div class="card-content">
-                      <p>My name is John Doe and I love watching the Atlanta Hawks play basketball.</p>
+                      <p>My name is Maurice Perkins and I love watching the Atlanta Hawks play basketball.</p>
                     </div>
                     <div class="card-footer">
                       <div class="icon-bar">
@@ -44,8 +44,8 @@
                         <a href="#" class="youtube"><i class="fa fa-youtube fa-2x"></i></a>
                       </div>
                     </div>
-                  </div>
-                  <div class="blog-card">
+                  </article>
+                  <article class="blog-card">
                     <div class="avatar">
                       <div class="avatar-circle">
                         <span class="initials">GP</span>
@@ -59,7 +59,7 @@
                       </p>
                     </div>
                     <div class="card-content">
-                      <p>My name is John Doe and I love watching the Atlanta Hawks play basketball.</p>
+                      <p>My name is Gail Payne and I love watching the Atlanta Hawks play basketball.</p>
                     </div>
                     <div class="card-footer">
                       <!-- The social media icon bar -->
@@ -71,8 +71,8 @@
                       <a href="#" class="youtube"><i class="fa fa-youtube fa-2x"></i></a>
                     </div>
                     </div>
-                  </div>
-                  <div class="blog-card">
+                  </article>
+                  <article class="blog-card">
                     <div class="avatar">
                       <div class="avatar-circle">
                         <span class="initials">TL</span>
@@ -86,7 +86,7 @@
                       </p>
                     </div>
                     <div class="card-content">
-                      <p>My name is John Doe and I love watching the Atlanta Hawks play basketball.</p>
+                      <p>My name is Tina Lambert and I love watching the Atlanta Hawks play basketball.</p>
                     </div>
                     <div class="card-footer">
                       <!-- The social media icon bar -->
@@ -98,8 +98,8 @@
                       <a href="#" class="youtube"><i class="fa fa-youtube fa-2x"></i></a>
                     </div>
                     </div>
-                  </div>
-                  <div class="blog-card">
+                  </article>
+                  <article class="blog-card">
                     <div class="avatar">
                       <div class="avatar-circle">
                         <span class="initials">WC</span>
@@ -113,7 +113,7 @@
                       </p>
                     </div>
                     <div class="card-content">
-                      <p>My name is John Doe and I love watching the Atlanta Hawks play basketball.</p>
+                      <p>My name is William Craig and I love watching the Atlanta Hawks play basketball.</p>
                     </div>
                     <div class="card-footer">
                       <!-- The social media icon bar -->
@@ -125,8 +125,8 @@
                       <a href="#" class="youtube"><i class="fa fa-youtube fa-2x"></i></a>
                     </div>
                     </div>
-                  </div>
-                  <div class="blog-card">
+                  </article>
+                  <article class="blog-card">
                     <div class="avatar">
                       <div class="avatar-circle">
                         <span class="initials">EB</span>
@@ -140,7 +140,7 @@
                       </p>
                     </div>
                     <div class="card-content">
-                      <p>My name is John Doe and I love watching the Atlanta Hawks play basketball.</p>
+                      <p>My name is Erica Bradley and I love watching the Atlanta Hawks play basketball.</p>
                     </div>
                     <div class="card-footer">
                       <!-- The social media icon bar -->
@@ -152,8 +152,8 @@
                       <a href="#" class="youtube"><i class="fa fa-youtube fa-2x"></i></a>
                     </div>
                     </div>
-                  </div>
-                  <div class="blog-card">
+                  </article>
+                  <article class="blog-card">
                     <div class="avatar">
                       <div class="avatar-circle">
                         <span class="initials">BA</span>
@@ -167,7 +167,7 @@
                       </p>
                     </div>
                     <div class="card-content">
-                      <p>My name is John Doe and I love watching the Atlanta Hawks play basketball.</p>
+                      <p>My name is Barry Adkins and I love watching the Atlanta Hawks play basketball.</p>
                     </div>
                     <div class="card-footer">
                       <!-- The social media icon bar -->
@@ -179,8 +179,8 @@
                       <a href="#" class="youtube"><i class="fa fa-youtube fa-2x"></i></a>
                     </div>
                     </div>
-                  </div>
-                  <div class="blog-card">
+                  </article>
+                  <article class="blog-card">
                     <div class="avatar">
                       <div class="avatar-circle">
                         <span class="initials">EC</span>
@@ -206,13 +206,15 @@
                       <a href="#" class="youtube"><i class="fa fa-youtube fa-2x"></i></a>
                     </div>
                     </div>
-                  </div>
-                </div>            
-              </div>
-              <div class="footer box">
-                <h4 class="card-title"><q>Blog Template build by Terry Parrish</q></h4>
-                <a href="./../../index.html">Home</a>
-            </div>
-          </div>
+                  </article>
+                </article>            
+              </article>
+              <footer class="box">
+                <h4 class="card-title">
+                  <q>Blog Template build by Terry Parrish</q>
+                  <a href="./../../index.html">Home</a>
+                </h4>
+              </footer>
+            </main>
     </body>
 </html>
