--- a/views/blogs/san_antonio_spurs_blog.html
+++ b/views/blogs/san_antonio_spurs_blog.html
@@ -7,21 +7,214 @@
         <meta name="author" content="Terry Parrish">
         <meta name="description" content="Terry's Basketball Blog" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" >
+        <link rel="stylesheet" href="./../../css/style.css">
         <link rel="stylesheet" href="./../../css/blog.css">
-        
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" media="screen" />
     </head>
     <body>
-        <div class="container">
-            <div class="header box">
-                <h1>Spurs Blog</h1>
-                <a href="./../../index.html">Home</a>
-            </div>
-            <div class="content box">
-                <div id="nestedGrid"></div>
-            </div>
-            <div class="footer box">
-                <h5 class="card-title">Blog Template build by Terry Parrish</h5>
-            </div>
-        </div>
+        <main class="container">
+            <header class="box">
+                <div class="san_antonio_spurs logo"></div>
+                <h1>Spurs Blog</h1>    
+            </header>
+            <article class="content box">
+                <article id="blog-cards">
+                  <article class="blog-card">
+                    <div class="avatar">
+                      <div class="avatar-circle">
+                        <span class="initials">MP</span>
+                      </div>
+                    </div>
+                    <div class="card-header">
+                      <p>
+                        <h2>Maurice Perkins</h2>
+                        <h3>Software Engineer</h3>
+                        <h4>Emory University</h4>
+                      </p>
+                    </div>
+                    <div class="card-content">
+                      <p>My name is Maurice Perkins and I love watching the San Antonio Spurs play basketball.</p>
+                    </div>
+                    <div class="card-footer">
+                      <div class="icon-bar">
+                        <a href="#" class="facebook"><i class="fa fa-facebook fa-2x"></i></a>
+                        <a href="#" class="twitter"><i class="fa fa-twitter fa-2x"></i></a>
+                        <a href="#" class="google"><i class="fa fa-google fa-2x"></i></a>
+                        <a href="#" class="linkedin"><i class="fa fa-linkedin fa-2x"></i></a>
+                        <a href="#" class="youtube"><i class="fa fa-youtube fa-2x"></i></a>
+                      </div>
+                    </div>
+                  </article>
+                  <article class="blog-card">
+                    <div class="avatar">
+                      <div class="avatar-circle">
+                        <span class="initials">GP</span>
+                      </div>
+                    </div>
+                    <div class="card-header">
+                      <p>
+                        <h2>Gail Payne</h2>
+                        <h3>Software Engineer</h3>
+                        <h4>Emory University</h4>
+                      </p>
+                    </div>
+                    <div class="card-content">
+                      <p>My name is Gail Payne and I love watching the San Antonio Spurs play basketball.</p>
+                    </div>
+                    <div class="card-footer">
+                      <!-- The social media icon bar -->
+                    <div class="icon-bar bar">
+                      <a href="#" class="facebook"><i class="fa fa-facebook fa-2x"></i></a>
+                      <a href="#" class="twitter"><i class="fa fa-twitter fa-2x"></i></a>
+                      <a href="#" class="google"><i class="fa fa-google fa-2x"></i></a>
+                      <a href="#" class="linkedin"><i class="fa fa-linkedin fa-2x"></i></a>
+                      <a href="#" class="youtube"><i class="fa fa-youtube fa-2x"></i></a>
+                    </div>
+                    </div>
+                  </article>
+                  <article class="blog-card">
+                    <div class="avatar">
+                      <div class="avatar-circle">
+                        <span class="initials">TL</span>
+                      </div>
+                    </div>
+                    <div class="card-header">
+                      <p>
+                        <h2>Tina Lambert</h2>
+                        <h3>Software Engineer</h3>
+                        <h4>Emory University</h4>
+                      </p>
+                    </div>
+                    <div class="card-content">
+                      <p>My name is Tina Lambert and I love watching the San Antonio Spurs play basketball.</p>
+                    </div>
+                    <div class="card-footer">
+                      <!-- The social media icon bar -->
+                    <div class="icon-bar bar">
+                      <a href="#" class="facebook"><i class="fa fa-facebook fa-2x"></i></a>
+                      <a href="#" class="twitter"><i class="fa fa-twitter fa-2x"></i></a>
+                      <a href="#" class="google"><i class="fa fa-google fa-2x"></i></a>
+                      <a href="#" class="linkedin"><i class="fa fa-linkedin fa-2x"></i></a>
+                      <a href="#" class="youtube"><i class="fa fa-youtube fa-2x"></i></a>
+                    </div>
+                    </div>
+                  </article>
+                  <article class="blog-card">
+                    <div class="avatar">
+                      <div class="avatar-circle">
+                        <span class="initials">WC</span>
+                      </div>
+                    </div>
+                    <div class="card-header">
+                      <p>
+                        <h2>William Craig</h2>
+                        <h3>Software Engineer</h3>
+                        <h4>Emory University</h4>
+                      </p>
+                    </div>
+                    <div class="card-content">
+                      <p>My name is William Craig and I love watching the San Antonio Spurs play basketball.</p>
+                    </div>
+                    <div class="card-footer">
+                      <!-- The social media icon bar -->
+                    <div class="icon-bar bar">
+                      <a href="#" class="facebook"><i class="fa fa-facebook fa-2x"></i></a>
+                      <a href="#" class="twitter"><i class="fa fa-twitter fa-2x"></i></a>
+                      <a href="#" class="google"><i class="fa fa-google fa-2x"></i></a>
+                      <a href="#" class="linkedin"><i class="fa fa-linkedin fa-2x"></i></a>
+                      <a href="#" class="youtube"><i class="fa fa-youtube fa-2x"></i></a>
+                    </div>
+                    </div>
+                  </article>
+                  <article class="blog-card">
+                    <div class="avatar">
+                      <div class="avatar-circle">
+                        <span class="initials">EB</span>
+                      </div>
+                    </div>
+                    <div class="card-header">
+                      <p>
+                        <h2>Erica Bradley</h2>
+                        <h3>Software Engineer</h3>
+                        <h4>Emory University</h4>
+                      </p>
+                    </div>
+                    <div class="card-content">
+                      <p>My name is Erica Bradley and I love watching the San Antonio Spurs play basketball.</p>
+                    </div>
+                    <div class="card-footer">
+                      <!-- The social media icon bar -->
+                    <div class="icon-bar bar">
+                      <a href="#" class="facebook"><i class="fa fa-facebook fa-2x"></i></a>
+                      <a href="#" class="twitter"><i class="fa fa-twitter fa-2x"></i></a>
+                      <a href="#" class="google"><i class="fa fa-google fa-2x"></i></a>
+                      <a href="#" class="linkedin"><i class="fa fa-linkedin fa-2x"></i></a>
+                      <a href="#" class="youtube"><i class="fa fa-youtube fa-2x"></i></a>
+                    </div>
+                    </div>
+                  </article>
+                  <article class="blog-card">
+                    <div class="avatar">
+                      <div class="avatar-circle">
+                        <span class="initials">BA</span>
+                      </div>
+                    </div>
+                    <div class="card-header">
+                      <p>
+                        <h2>Barry Adkins</h2>
+                        <h3>Software Engineer</h3>
+                        <h4>Emory University</h4>
+                      </p>
+                    </div>
+                    <div class="card-content">
+                      <p>My name is Barry Adkins and I love watching the San Antonio Spurs play basketball.</p>
+                    </div>
+                    <div class="card-footer">
+                      <!-- The social media icon bar -->
+                    <div class="icon-bar bar">
+                      <a href="#" class="facebook"><i class="fa fa-facebook fa-2x"></i></a>
+                      <a href="#" class="twitter"><i class="fa fa-twitter fa-2x"></i></a>
+                      <a href="#" class="google"><i class="fa fa-google fa-2x"></i></a>
+                      <a href="#" class="linkedin"><i class="fa fa-linkedin fa-2x"></i></a>
+                      <a href="#" class="youtube"><i class="fa fa-youtube fa-2x"></i></a>
+                    </div>
+                    </div>
+                  </article>
+                  <article class="blog-card">
+                    <div class="avatar">
+                      <div class="avatar-circle">
+                        <span class="initials">EC</span>
+                      </div>
+                    </div>
+                    <div class="card-header">
+                      <p>
+                        <h2>Elsa Clark</h2>
+                        <h3>Software Engineer</h3>
+                        <h4>Emory University</h4>
+                      </p>
+                    </div>
+                    <div class="card-content">
+                      <p>My name is Elsa Clark and I love watching the San Antonio Spurs play basketball.</p>
+                    </div>
+                    <div class="card-footer">
+                      <!-- The social media icon bar -->
+                    <div class="icon-bar bar">
+                      <a href="#" class="facebook"><i class="fa fa-facebook fa-2x"></i></a>
+                      <a href="#" class="twitter"><i class="fa fa-twitter fa-2x"></i></a>
+                      <a href="#" class="google"><i class="fa fa-google fa-2x"></i></a>
+                      <a href="#" class="linkedin"><i class="fa fa-linkedin fa-2x"></i></a>
+                      <a href="#" class="youtube"><i class="fa fa-youtube fa-2x"></i></a>
+                    </div>
+                    </div>
+                  </article>
+                </article>            
+              </article>
+              <footer class="box">
+                <h4 class="card-title">
+                  <q>Blog Template build by Terry Parrish</q>
+                  <a href="./../../index.html">Home</a>
+                </h4>
+              </footer>
+            </main>
     </body>
 </html>
