--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
         justify-content: center;
         padding: 20px;
         grid-template-columns: 200px repeat(8, 1fr);
-        grid-template-rows: 10vh 70vh 8vh;
+        grid-template-rows: 13vh 75vh 8vh;
         grid-template-areas: "hd hd hd hd hd hd hd hd hd"
                              "sb sb ct ct ct ct ct ct ct"
                              "ft ft ft ft ft ft ft ft ft";
@@ -33,10 +33,9 @@ body {
     border: 1px solid #DDDDDD;
 }
 
-.header {
+header {
     grid-area: hd;
-    justify-items: center;
-    align-items: center;
+    place-items: center center;
     background-color: #957BBE;
     color: white;
 }
@@ -48,36 +47,45 @@ body {
     color: black;
 }
 
+.content {
+    grid-area: ct;
+    place-content: center;
+    background-color: white;
+    overflow: scroll;
+}
+
+footer {
+    display: grid; 
+    grid-area: ft;
+    place-content: center center;
+    place-items: center center;
+    background-color: #957BBE;
+    color: white;           
+}
+
+#team-cards {
+    display: grid;
+    width: 100%;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-flow: row;
+    grid-gap: 16px;
+    padding: 16px;
+}
+
+.team-card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border: 1px solid #d3d3d3;
+    border-radius: .25rem;
+    min-width: 200px;
+    border-radius: 8px;
+}
+
 h1#blog-header {
     margin: 8px;
 }
 h2#team-header {
     margin: 8px;
-}
-
-.content {
-    grid-area: ct;
-    justify-content: center;
-    background-color: white;
-    overflow: scroll;
-}
-
-.footer {
-    display: grid; 
-    grid-area: ft;
-    place-content: center center;
-    place-items: center center;
-    color: white;
-    background-color: #957BBE;
-}
-
-#nestedGrid {
-    display: grid;
-    width: 100%;
-    grid-template-columns: repeat(6, 1fr);
-    grid-auto-flow: row;
-    grid-gap: 16px;
-    padding: 16px;
 }
 
 #nba_conference_list {
@@ -91,17 +99,6 @@ h4.card-title {
     font-weight: bold;
     justify-content: center; 
     align-content: center;
-}
-
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    border: 1px solid #d3d3d3;
-    border-radius: .25rem;
-    min-width: 200px;
-    border-radius: 8px;
-
-    /* background-color: #ccc; */
 }
 
 .card-content {
@@ -132,7 +129,7 @@ button {
     margin-bottom: 16px;
   }
 
-.team {
+.team-size {
     width: 150px;
     height: 150px;
     margin: auto;
