--- a/views/eastern_conference_blog_post.html
+++ b/views/eastern_conference_blog_post.html
@@ -6,15 +6,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <meta name="author" content="Terry Parrish">
         <meta name="description" content="Terry's Basketball Blog" />
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" >
+        <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" >
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" media="screen" />
         <link rel="stylesheet" href="../../css/style.css">
     </head>
     <body>
-        <div class="container">
-            <div class="header box">
+        <main class="container">
+            <header class="box">
                 <h1 id="blog-header">Terry's Basketball Blog</h1>
-            </div>
-            <div class="sidebar box">
+            </header>
+            <article class="sidebar box">
                 <h2 id="team-header">NBA Team Conference</h2>
                 <div id="nba_conference_list">
                     <ul>
@@ -23,148 +24,148 @@
                         <li><a href="western_conference_blog_post.html">Western Conference</a></li>
                     </ul>
                 </div>                
-            </div>
-            <div class="content box">
-                <div id="nestedGrid">
-                    <div class="card">
-                        <div class="atlanta_hawks team"></div>
+            </article>
+            <article class="content box">
+                <article id="team-cards">
+                    <article class="team-card">
+                        <div class="atlanta_hawks team-size"></div>
                         <figcaption>&copy; Hawks</figcaption>
                         <div class="card-content">
                             <h4 class="card-title">Atlanta Hawks</h4>
                             <button><a href="./../views/blogs/atlanta_hawks_blog.html">View blog</a></button>
                         </div>
-                    </div>
+                    </article>
 
-                    <div class="card">
-                        <div class="boston_celtics team"></div>
+                    <article class="team-card">
+                        <div class="boston_celtics team-size"></div>
                         <figcaption>&copy; Celtics</figcaption>
                         <div class="card-content">
                             <h4 class="card-title">Boston Celtics</h4>
                             <button><a href="./../views/blogs/boston_celtics_blog.html">View blog</a></button>
                         </div>
-                    </div>
+                    </article>
 
-                    <div class="card">
-                        <div class="brooklyn_nets team"></div>
+                    <article class="team-card">
+                        <div class="brooklyn_nets team-size"></div>
                         <figcaption>&copy; Nets</figcaption>
                         <div class="card-content">
                             <h4 class="card-title">Brooklyn Nets</h4>
                             <button><a href="./../views/blogs/brooklyn_nets_blog.html">View blog</a></button>
                         </div>
-                    </div>
+                    </article>
 
-                    <div class="card">
-                        <div class="charlotte_hornets team"></div>
+                    <article class="team-card">
+                        <div class="charlotte_hornets team-size"></div>
                         <figcaption>&copy; Hornets</figcaption>
                         <div class="card-content">
                             <h4 class="card-title">Charlotte Hornets</h4>
                             <button><a href="./../views/blogs/charlotte_hornets_blog.html">View blog</a></button>
                         </div>
-                    </div>
+                    </article>
 
-                    <div class="card">
-                        <div class="chicago_bulls team"></div>
+                    <article class="team-card">
+                        <div class="chicago_bulls team-size"></div>
                         <figcaption>&copy; Bulls</figcaption>
                         <div class="card-content">
                             <h4 class="card-title">Chicago Bulls</h4>
                             <button><a href="./../views/blogs/chicago_bulls_blog.html">View blog</a></button>
                         </div>
-                    </div>
+                    </article>
 
-                    <div class="card">
-                        <div class="cleveland_cavaliers team"></div>
+                    <article class="team-card">
+                        <div class="cleveland_cavaliers team-size"></div>
                         <figcaption>&copy; Cavaliers</figcaption>
                         <div class="card-content">
                             <h4 class="card-title">Cleveland Cavaliers</h4>
                             <button><a href="./../views/blogs/cleveland_cavaliers_blog.html">View blog</a></button>
                         </div>
-                    </div>
+                    </article>
 
-                    <div class="card">
-                        <div class="detroit_pistons team"></div>
+                    <article class="team-card">
+                        <div class="detroit_pistons team-size"></div>
                         <figcaption>&copy; Pistons</figcaption>
                         <div class="card-content">
                             <h4 class="card-title">Detroit Pistons</h4>
                             <button><a href="./../views/blogs/detroit_pistons_blog.html">View blog</a></button>
                         </div>
-                    </div>
+                    </article>
 
-                    <div class="card">
-                        <div class="indiana_pacers team"></div>
+                    <article class="team-card">
+                        <div class="indiana_pacers team-size"></div>
                         <figcaption>&copy; Pacers</figcaption>
                         <div class="card-content">
                             <h4 class="card-title">Indiana Pacers</h4>
                             <button><a href="./../views/blogs/indiana_pacers_blog.html">View blog</a></button>
                         </div>
-                    </div>
+                    </article>
                     
-                    <div class="card">
-                        <div class="miami_heat team"></div>
+                    <article class="team-card">
+                        <div class="miami_heat team-size"></div>
                         <figcaption>&copy; Heat</figcaption>
                         <div class="card-content">
                             <h4 class="card-title">Miami Heat</h4>
                             <button><a href="./../views/blogs/miami_heat_blog.html">View blog</a></button>
                         </div>
-                    </div>
+                    </article>
 
-                    <div class="card">
-                        <div class="milwaukee_bucks team"></div>
+                    <article class="team-card">
+                        <div class="milwaukee_bucks team-size"></div>
                         <figcaption>&copy; Bucks</figcaption>
                         <div class="card-content">
                             <h4 class="card-title">Milwaukee Bucks</h4>
                             <button><a href="./../views/blogs/milwaukee_bucks_blog.html">View blog</a></button>
                         </div>
-                    </div>
+                    </article>
 
-                    <div class="card">
-                        <div class="new_york_knicks team"></div>
+                    <article class="team-card">
+                        <div class="new_york_knicks team-size"></div>
                         <figcaption>&copy; Knicks</figcaption>
                         <div class="card-content">
                             <h4 class="card-title">New York Knicks</h4>
                             <button><a href="./../views/blogs/new_york_knicks_blog.html">View blog</a></button>
                         </div>
-                    </div>
+                    </article>
                     
-                    <div class="card">
-                        <div class="orlando_magic team"></div>
+                    <article class="team-card">
+                        <div class="orlando_magic team-size"></div>
                         <figcaption>&copy; Magic</figcaption>
                         <div class="card-content">
                             <h4 class="card-title">Orlando Magic</h4>
                             <button><a href="./../views/blogs/orlando_magic_blog.html">View blog</a></button>
                         </div>
-                    </div>
+                    </article>
 
-                    <div class="card">
-                        <div class="toronto_raptors team"></div>
+                    <article class="team-card">
+                        <div class="toronto_raptors team-size"></div>
                         <figcaption>&copy; Raptors</figcaption>
                         <div class="card-content">
                             <h4 class="card-title">Toronto Raptors</h4>
                             <button><a href="./../views/blogs/toronto_raptors_blog.html">View blog</a></button>
                         </div>
-                    </div>
+                    </article>
 
-                    <div class="card">
-                        <div class="washington_wizards team"></div>
+                    <article class="team-card">
+                        <div class="washington_wizards team-size"></div>
                         <figcaption>&copy; Wizards</figcaption>
                         <div class="card-content">
                             <h4 class="card-title">Washington Wizards</h4>
                             <button><a href="./../views/blogs/washington_wizards_blog.html">View blog</a></button>
                         </div>
-                    </div>
+                    </article>
 
-                    <div class="card">
-                        <div class="philadelphia_76ers team"></div>
+                    <article class="team-card">
+                        <div class="philadelphia_76ers team-size"></div>
                         <figcaption>&copy; 76ers</figcaption>
                         <div class="card-content">
                             <h4 class="card-title">Philadelphia 76ers</h4>
                             <button><a href="./../views/blogs/philadelphia_76ers_blog.html">View blog</a></button>
                         </div>
-                    </div>
-                </div>
-            </div>
-            <div class="footer box">
+                    </article>
+                </article>
+            </article>
+            <footer class="box">
                 <h4 class="card-title"><q>Blog Template build by Terry Parrish</q></h4>            
-            </div>
-        </div>
+            </footer>
+        </main>
     </body>
 </html>
