--- a/views/western_conference_blog_post.html
+++ b/views/western_conference_blog_post.html
@@ -6,15 +6,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <meta name="author" content="Terry Parrish">
         <meta name="description" content="Terry's Basketball Blog" />
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" >
+        <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" >
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" media="screen" />
         <link rel="stylesheet" href="../../css/style.css">
     </head>
     <body>
-        <div class="container">
-            <div class="header box">
+        <main class="container">
+            <header class="box">
                 <h1 id="blog-header">Terry's Basketball Blog</h1>
-            </div>
-            <div class="sidebar box">
+            </header>
+            <article class="sidebar box">
                 <h2 id="team-header">NBA Team Conference</h2>
                 <div id="nba_conference_list">
                     <ul>
@@ -23,148 +24,148 @@
                         <li><a href="western_conference_blog_post.html">Western Conference</a></li>
                     </ul>
                 </div>                
-            </div>
-            <div class="content box">
-                <div id="nestedGrid">
-                    <div class="card">
-                        <div class="dallas_mavericks team"></div>
+            </article>
+            <article class="content box">
+                <article id="team-cards">
+                    <article class="team-card">
+                        <div class="dallas_mavericks team-size"></div>
                         <figcaption>&copy; Mavericks</figcaption>
                         <div class="card-content">
                             <h4 class="card-title">Dallas Mavericks</h4>
                             <button><a href="./../views/blogs/dallas_mavericks_blog.html">View blog</a></button>
                         </div>
-                    </div>
+                    </article>
 
-                    <div class="card">
-                        <div class="denver_nuggets team"></div>
+                    <article class="team-card">
+                        <div class="denver_nuggets team-size"></div>
                         <figcaption>&copy; Nuggets</figcaption>
                         <div class="card-content">
                             <h4 class="card-title">Denver Nuggets</h4>
                             <button><a href="./../views/blogs/denver_nuggets_blog.html">View blog</a></button>
                         </div>
-                    </div>
+                    </article>
 
-                    <div class="card">
-                        <div class="golden_state_warriors team"></div>
+                    <article class="team-card">
+                        <div class="golden_state_warriors team-size"></div>
                         <figcaption>&copy; Warriors</figcaption>
                         <div class="card-content">
                             <h4 class="card-title">Golden State Warriors</h4>
                             <button><a href="./../views/blogs/golden_state_warriors_blog.html">View blog</a></button>
                         </div>
-                    </div>
+                    </article>
 
-                    <div class="card">
-                        <div class="houston_rockets team"></div>
+                    <article class="team-card">
+                        <div class="houston_rockets team-size"></div>
                         <figcaption>&copy; Rockets</figcaption>
                         <div class="card-content">
                             <h4 class="card-title">Houston Rockets</h4>
                             <button><a href="./../views/blogs/houston_rockets_blog.html">View blog</a></button>
                         </div>
-                    </div>
+                    </article>
 
-                    <div class="card">
-                        <div class="los_angeles_lakers team"></div>
+                    <article class="team-card">
+                        <div class="los_angeles_lakers team-size"></div>
                         <figcaption>&copy; Lakers</figcaption>
                         <div class="card-content">
                             <h4 class="card-title">Los Angeles Lakers</h4>
                             <button><a href="./../views/blogs/los_angeles_lakers_blog.html">View blog</a></button>
                         </div>
-                    </div>
+                    </article>
 
-                    <div class="card">
-                        <div class="los_angeles_clippers team"></div>
+                    <article class="team-card">
+                        <div class="los_angeles_clippers team-size"></div>
                         <figcaption>&copy; Clippers</figcaption>
                         <div class="card-content">
                             <h4 class="card-title">Los Angeles Clippers</h4>
                             <button><a href="./../views/blogs/los_angeles_clippers_blog.html">View blog</a></button>
                         </div>
-                    </div>
+                    </article>
 
-                    <div class="card">
-                        <div class="memphis_grizzlies team"></div>
+                    <article class="team-card">
+                        <div class="memphis_grizzlies team-size"></div>
                         <figcaption>&copy; Grizzlies</figcaption>
                         <div class="card-content">
                             <h4 class="card-title">Memphis Grizzlies</h4>
                             <button><a href="./../views/blogs/memphis_grizzlies_blog.html">View blog</a></button>
                         </div>
-                    </div>
+                    </article>
 
-                    <div class="card">
-                        <div class="minnesota_timberwolves team"></div>
+                    <article class="team-card">
+                        <div class="minnesota_timberwolves team-size"></div>
                         <figcaption>&copy; Timberwolves</figcaption>
                         <div class="card-content">
                             <h4 class="card-title">Minnesota Timberwolves</h4>
                             <button><a href="./../views/blogs/minnesota_timberwolves_blog.html">View blog</a></button>
                         </div>
-                    </div>
+                    </article>
 
-                    <div class="card">
-                        <div class="new_orleans_pelicans team"></div>
+                    <article class="team-card">
+                        <div class="new_orleans_pelicans team-size"></div>
                         <figcaption>&copy; Pelicans</figcaption>
                         <div class="card-content">
                             <h4 class="card-title">New Orleans Pelicans</h4>
                             <button><a href="./../views/blogs/new_orleans_pelicans_blog.html">View blog</a></button>
                         </div>
-                    </div>
+                    </article>
 
-                    <div class="card">
-                        <div class="oklahoma_city_thunder team"></div>
+                    <article class="team-card">
+                        <div class="oklahoma_city_thunder team-size"></div>
                         <figcaption>&copy; Thunder</figcaption>
                         <div class="card-content">
                             <h4 class="card-title">Oklahoma City Thunder</h4>
                             <button><a href="./../views/blogs/oklahoma_city_thunder_blog.html">View blog</a></button>
                         </div>
-                    </div>
+                    </article>
 
-                    <div class="card">
-                        <div class="phoenix_suns team"></div>
+                    <article class="team-card">
+                        <div class="phoenix_suns team-size"></div>
                         <figcaption>&copy; Suns</figcaption>
                         <div class="card-content">
                             <h4 class="card-title">Phoenix Suns</h4>
                             <button><a href="./../views/blogs/phoenix_suns_blog.html">View blog</a></button>
                         </div>
-                    </div>
+                    </article>
 
-                    <div class="card">
-                        <div class="portland_trail_blazers team"></div>
+                    <article class="team-card">
+                        <div class="portland_trail_blazers team-size"></div>
                         <figcaption>&copy; Blazers</figcaption>
                         <div class="card-content">
                             <h4 class="card-title">Portland Trail Blazers</h4>
                             <button><a href="./../views/blogs/portland_trail_blazers_blog.html">View blog</a></button>
                         </div>
-                    </div>
+                    </article>
 
-                    <div class="card">
-                        <div class="san_antonio_spurs team"></div>
+                    <article class="team-card">
+                        <div class="san_antonio_spurs team-size"></div>
                         <figcaption>&copy; Spurs</figcaption>
                         <div class="card-content">
                             <h4 class="card-title">San Antonio Spurs</h4>
                             <button><a href="./../views/blogs/san_antonio_spurs_blog.html">View blog</a></button>
                         </div>
-                    </div>
+                    </article>
 
-                    <div class="card">
-                        <div class="utah_jazz team"></div>
+                    <article class="team-card">
+                        <div class="utah_jazz team-size"></div>
                         <figcaption>&copy; Jazz</figcaption>
                         <div class="card-content">
                             <h4 class="card-title">Utah Jazz</h4>
                             <button><a href="./../views/blogs/utah_jazz_blog.html">View blog</a></button>
                         </div>
-                    </div>
+                    </article>
 
-                    <div class="card">
-                        <div class="sacramento_kings team"></div>
+                    <article class="team-card">
+                        <div class="sacramento_kings team-size"></div>
                         <figcaption>&copy; Kings</figcaption>
                         <div class="card-content">
                             <h4 class="card-title">Sacramento Kings</h4>
                             <button><a href="./../views/blogs/sacramento_kings_blog.html">View blog</a></button>
                         </div>
-                    </div>
-                </div>
-            </div>
-            <div class="footer box">
+                    </article>
+                </article>
+            </article>
+            <footer class="box">
                 <h4 class="card-title"><q>Blog Template build by Terry Parrish</q></h4>
-            </div>
-        </div>
+            </footer>
+        </main>
     </body>
 </html>
